--- a/Ayushi/my_app/pubspec.yaml
+++ b/Ayushi/my_app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: first_app
+name: my_app
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
